# home-quest

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: llm.py  main.py
src/agents/: discovery.py  filter_agent.py  reporter.py  scraper.py
src/models/: listing.py
src/storage/: db.py
src/tools/: email_sender.py  geo.py  page_fetcher.py
