[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-quest"
version = "0.1.0"
description = "AI-powered home search agent"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "geopy>=2.4.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
home-quest = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
